Enabled Help menu and showing about window.

--- a/LogReader-WPF/MainWindow.xaml
+++ b/LogReader-WPF/MainWindow.xaml
@@ -12,8 +12,8 @@
             <Menu.BitmapEffect>
                 <DropShadowBitmapEffect />
             </Menu.BitmapEffect>
-            <MenuItem Header="_Help" IsEnabled="False">
-                <MenuItem Header="_About"/>
+            <MenuItem Header="_Help">
+                <MenuItem Header="_About" Click="OpenAbout"/>
             </MenuItem>
         </Menu>
 
