--- a/LogReader-WPF/MainWindow.xaml
+++ b/LogReader-WPF/MainWindow.xaml
@@ -49,6 +49,9 @@
 
         <Label Content="Warning:" HorizontalAlignment="Left" Margin="747,24,0,0" VerticalAlignment="Top"/>
         <TextBlock x:Name="WarningNumber" HorizontalAlignment="Left" Margin="802,30,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="27"/>
+        <TextBox HorizontalAlignment="Left" Margin="916,29,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Name="SearchBox"/>
+        <Button Content="Search Grid" HorizontalAlignment="Left" Margin="1074,27,0,0" VerticalAlignment="Top" Click="SearchGrid"/>
+        <Button Content="Clear Search" HorizontalAlignment="Left" Margin="1155,27,0,0" VerticalAlignment="Top" Click="ClearSearch"/>
 
     </Grid>
 </Window>
