--- a/LogReader-WPF/MainWindow.xaml
+++ b/LogReader-WPF/MainWindow.xaml
@@ -15,52 +15,53 @@
             <MenuItem Name="MenuHistory" Header="_History">
                 <MenuItem.ItemContainerStyle>
                     <Style TargetType="{x:Type MenuItem}">
-                        <EventSetter Event="Click" Handler="OpenLogFile_Click"/>
+                        <EventSetter Event="Click" Handler="OpenLogFile_Click" />
                     </Style>
                 </MenuItem.ItemContainerStyle>
             </MenuItem>
             <MenuItem Header="_Help">
-                <MenuItem Header="_About" Click="OpenAbout"/>
+                <MenuItem Header="_About" Click="OpenAbout" />
             </MenuItem>
         </Menu>
 
-
-        <DataGrid
-            x:Name="LogFileData"
-            Margin="218,55,10,23"
-            AllowDrop="True" Drop="DataGridFile_Drop">
-            <DataGrid.Columns>
-                <DataGridTextColumn Binding="{Binding Path=.}"/>
-            </DataGrid.Columns>
-
-            <DataGrid.ItemContainerStyle>
-                <Style TargetType="DataGridRow">
-                    <Style.Triggers>
-                        <DataTrigger Binding="{Binding}"  Value="true">
-                            <Setter Property="Visibility" Value="Collapsed"/>
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-            </DataGrid.ItemContainerStyle>
-        </DataGrid>
-
-        <TextBox Name="LogFileLocation" HorizontalAlignment="Left" Margin="10,28,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="584"/>
-        <Button Content="Open Log" HorizontalAlignment="Left" Margin="599,27,0,0" VerticalAlignment="Top" Click="OpenLogFile_Click"/>
+        <TextBox Name="LogFileLocation" HorizontalAlignment="Left" Margin="10,28,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="584" />
+        <Button Content="Open Log" HorizontalAlignment="Left" Margin="599,27,0,0" VerticalAlignment="Top" Click="OpenLogFile_Click" />
 
         <StatusBar Name="sbar" VerticalAlignment="Bottom">
             <StatusBarItem>
                 <TextBlock Name="StatusBar"></TextBlock>
             </StatusBarItem>
         </StatusBar>
-        <Label Content="Errors:" HorizontalAlignment="Left" Margin="667,24,0,0" VerticalAlignment="Top"/>
-        <TextBlock Name="ErrorNumber" HorizontalAlignment="Left" Margin="708,29,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="23"/>
+        <Label Content="Errors:" Tag="Error" HorizontalAlignment="Left" Margin="667,24,0,0" VerticalAlignment="Top" MouseDown="SearchGrid" />
+        <TextBlock Name="ErrorNumber" HorizontalAlignment="Left" Margin="708,29,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="23" />
 
-        <Label Content="Warning:" HorizontalAlignment="Left" Margin="747,24,0,0" VerticalAlignment="Top"/>
-        <TextBlock x:Name="WarningNumber" HorizontalAlignment="Left" Margin="802,30,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="27"/>
-        <TextBox HorizontalAlignment="Left" Margin="916,29,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Name="SearchBox"/>
-        <Button Content="Search Grid" HorizontalAlignment="Left" Margin="1074,27,0,0" VerticalAlignment="Top" Click="SearchGrid"/>
-        <Button Content="Clear Search" HorizontalAlignment="Left" Margin="1155,27,0,0" VerticalAlignment="Top" Click="ClearSearch"/>
-        <ListBox Name="FileList" Margin="10,55,0,27" SelectionChanged="LoadLogFile" HorizontalAlignment="Left" Width="186"/>
+        <Label Content="Warning:" Tag="Warning" HorizontalAlignment="Left" Margin="747,24,0,0" VerticalAlignment="Top" />
+        <TextBlock x:Name="WarningNumber" HorizontalAlignment="Left" Margin="802,30,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="27" />
+        <TextBox HorizontalAlignment="Left" Margin="916,29,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Name="SearchBox" />
+        <Button Content="Search Grid" HorizontalAlignment="Left" Margin="1074,27,0,0" VerticalAlignment="Top" Click="SearchGrid" />
+        <Button Content="Clear Search" HorizontalAlignment="Left" Margin="1155,27,0,0" VerticalAlignment="Top" Click="ClearSearch" />
+        <ListBox Name="FileList" Margin="10,67,0,40" SelectionChanged="LoadLogFile" HorizontalAlignment="Left" Width="186" />
+        <Button Name="ShowHideFileList" Content="Hide File List" HorizontalAlignment="Left" Margin="1243,27,0,0" VerticalAlignment="Top" Click="HideShowFolderList" />
+
+        <DataGrid Margin="220,67,10,40"
+                    x:Name="LogFileData"
+                    AllowDrop="True" 
+                  Drop="DataGridFile_Drop">
+
+            <DataGrid.Columns>
+                <DataGridTextColumn Binding="{Binding .}" />
+            </DataGrid.Columns>
+
+            <DataGrid.ItemContainerStyle>
+                <Style TargetType="{x:Type DataGridRow}">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding}"  Value="true">
+                            <Setter Property="Visibility" Value="Collapsed" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </DataGrid.ItemContainerStyle>
+        </DataGrid>
 
     </Grid>
 </Window>
