--- a/LogReader-WPF/MainWindow.xaml
+++ b/LogReader-WPF/MainWindow.xaml
@@ -7,6 +7,16 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="900" Width="1600" Loaded="Window_Loaded">
     <Grid>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <!-- First row for top content -->
+            <RowDefinition Height="*"/>
+            <!-- Second row for resizable content -->
+            <RowDefinition Height="Auto"/>
+            <!-- Third row for bottom content -->
+        </Grid.RowDefinitions>
+
         <Menu Height="22" Name="menu1" VerticalAlignment="Top" BorderThickness="2">
             <Menu.BitmapEffect>
                 <DropShadowBitmapEffect />
@@ -23,50 +33,78 @@
             </MenuItem>
         </Menu>
 
-        <TextBox Name="LogFileLocation" HorizontalAlignment="Left" Margin="10,28,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="584" />
-        <Button Content="Open Log" HorizontalAlignment="Left" Margin="599,27,0,0" VerticalAlignment="Top" Click="OpenLogFile_Click" />
+        <Grid Grid.Row="0">
+            <TextBox Name="LogFileLocation" HorizontalAlignment="Left" Margin="10,28,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="584" />
+            <Button Content="Open Log" HorizontalAlignment="Left" Margin="599,27,0,0" VerticalAlignment="Top" Click="OpenLogFile_Click" />
+            <Label Content="Warning:" Tag="Warning" HorizontalAlignment="Left" Margin="764,24,0,0" VerticalAlignment="Top" />
+            <TextBlock x:Name="WarningNumber" HorizontalAlignment="Left" Margin="819,30,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="43" />
+            <TextBox HorizontalAlignment="Left" Margin="916,29,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Name="SearchBox" />
+            <Button Content="Search Grid" HorizontalAlignment="Left" Margin="1074,27,0,0" VerticalAlignment="Top" Click="SearchGrid" />
+            <Button Content="Clear Search" HorizontalAlignment="Left" Margin="1155,27,0,0" VerticalAlignment="Top" Click="ClearSearch" />
+            <Label Content="Errors:" Tag="Error" HorizontalAlignment="Left" Margin="667,24,0,0" VerticalAlignment="Top" MouseDown="SearchGrid" />
+            <TextBlock Name="ErrorNumber" HorizontalAlignment="Left" Margin="708,29,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="51" />
+            <Button Name="ShowHideFileList" Content="Hide File List" HorizontalAlignment="Left" Margin="1243,27,0,0" VerticalAlignment="Top" Click="HideShowFolderList" />
+        </Grid>
 
-        <StatusBar Name="sbar" VerticalAlignment="Bottom">
-            <StatusBarItem>
-                <TextBlock Name="StatusBar"></TextBlock>
-            </StatusBarItem>
-        </StatusBar>
-        <Label Content="Errors:" Tag="Error" HorizontalAlignment="Left" Margin="667,24,0,0" VerticalAlignment="Top" MouseDown="SearchGrid" />
-        <TextBlock Name="ErrorNumber" HorizontalAlignment="Left" Margin="708,29,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="51" />
 
-        <Label Content="Warning:" Tag="Warning" HorizontalAlignment="Left" Margin="764,24,0,0" VerticalAlignment="Top" />
-        <TextBlock x:Name="WarningNumber" HorizontalAlignment="Left" Margin="819,30,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="43" />
-        <TextBox HorizontalAlignment="Left" Margin="916,29,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Name="SearchBox" />
-        <Button Content="Search Grid" HorizontalAlignment="Left" Margin="1074,27,0,0" VerticalAlignment="Top" Click="SearchGrid" />
-        <Button Content="Clear Search" HorizontalAlignment="Left" Margin="1155,27,0,0" VerticalAlignment="Top" Click="ClearSearch" />
-        <ListBox Name="FileList" Margin="10,67,0,40" SelectionChanged="LoadLogFile" HorizontalAlignment="Left" Width="186" />
-        <Button Name="ShowHideFileList" Content="Hide File List" HorizontalAlignment="Left" Margin="1243,27,0,0" VerticalAlignment="Top" Click="HideShowFolderList" />
+        <Grid Grid.Row="1" Margin="0,0,10,10">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="396*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="406*"/>
+            </Grid.RowDefinitions>
 
-        <DataGrid Margin="220,67,10,40"
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto" MinWidth="213"/>
+                <ColumnDefinition Width="Auto" MinWidth="23"/>
+                <ColumnDefinition Width="auto" MinWidth="8"/>
+            </Grid.ColumnDefinitions>
+
+            <ListBox  Name="FileList" Margin="14,15,0,24"  SelectionChanged="LoadLogFile" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.RowSpan="3">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding}" TextWrapping="NoWrap"/>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+
+            <GridSplitter Width="6" HorizontalAlignment="Center" Background="Black" Margin="0,15,0,10" Grid.Column="1" Grid.RowSpan="3" />
+
+            <DataGrid Grid.Column="2" Margin="0,18,0,24"
                     x:Name="LogFileData"
                     AllowDrop="True" 
                     Drop="DataGridFile_Drop"
-                    AutoGenerateColumns="False">
+                    AutoGenerateColumns="False" Grid.RowSpan="3" HorizontalAlignment="Left" Width="1336">
 
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="Content" Binding="{Binding Content}" />
-                <!-- <DataGridCheckBoxColumn Header="Is Error" Binding="{Binding IsError}" />
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Content" Binding="{Binding Content}" />
+                    <!-- <DataGridCheckBoxColumn Header="Is Error" Binding="{Binding IsError}" />
                 <DataGridCheckBoxColumn Header="Is Warning" Binding="{Binding IsWarning}" />-->
-            </DataGrid.Columns>
+                </DataGrid.Columns>
 
-            <DataGrid.RowStyle>
-                <Style TargetType="DataGridRow">
-                    <Style.Triggers>
-                        <DataTrigger Binding="{Binding IsError}" Value="True">
-                            <Setter Property="Background" Value="LightPink"/>
-                        </DataTrigger>
-                        <DataTrigger Binding="{Binding IsWarning}" Value="True">
-                            <Setter Property="Background" Value="LightYellow"/>
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-            </DataGrid.RowStyle>
-        </DataGrid>
+                <DataGrid.RowStyle>
+                    <Style TargetType="DataGridRow">
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding IsError}" Value="True">
+                                <Setter Property="Background" Value="LightPink"/>
+                            </DataTrigger>
+                            <DataTrigger Binding="{Binding IsWarning}" Value="True">
+                                <Setter Property="Background" Value="LightYellow"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </DataGrid.RowStyle>
+            </DataGrid>
+            
+            
+        </Grid>
 
+        <Grid Grid.Row="2">
+            <StatusBar Name="sbar" VerticalAlignment="Bottom">
+                <StatusBarItem>
+                    <TextBlock Name="StatusBar"></TextBlock>
+                </StatusBarItem>
+            </StatusBar>
+        </Grid>
     </Grid>
 </Window>
