--- a/LogReader-WPF/MainWindow.xaml
+++ b/LogReader-WPF/MainWindow.xaml
@@ -102,6 +102,12 @@
             <StackPanel Grid.Column="1" Orientation="Horizontal" Margin="20,0,0,0">
                 <Border Background="#FFEBEE" CornerRadius="3" Padding="8,5" Margin="0,0,10,0">
                     <StackPanel Orientation="Horizontal">
+                        <Label Content="Row Count:" Tag="Error" Foreground="#D32F2F" FontWeight="SemiBold" Padding="0,0,3,0" VerticalAlignment="Center" MouseDown="SearchGrid" />
+                        <TextBlock Name="RowCoount" Text="0" Foreground="#D32F2F" FontWeight="Bold" VerticalAlignment="Center" />
+                    </StackPanel>
+                </Border>
+                <Border Background="#FFEBEE" CornerRadius="3" Padding="8,5" Margin="0,0,10,0">
+                    <StackPanel Orientation="Horizontal">
                         <Label Content="Errors:" Tag="Error" Foreground="#D32F2F" FontWeight="SemiBold" Padding="0,0,3,0" VerticalAlignment="Center" MouseDown="SearchGrid" />
                         <TextBlock Name="ErrorNumber" Text="0" Foreground="#D32F2F" FontWeight="Bold" VerticalAlignment="Center" />
                     </StackPanel>
